# Debates_Team_engine

./: .gitignore  README.md
debate_team/: README.md  pyproject.toml
debate_team/output/: oppose.md  propose.md
debate_team/src/debate_team/: crew.py  main.py
debate_team/src/debate_team/config/: agents.yaml  tasks.yaml
